# Desapeguei

./: .gitignore  Procfile  aFazer.txt  manage.py  pyproject.toml  requirements.txt
Carrinho_app/: apps.py
Comentarios_app/: apps.py  forms.py  models.py
Comentarios_app/migrations/: 0001_initial.py  0002_comentario_data_alter_comentario_comentado_por.py  0003_alter_comentario_produto.py
Desapeguei_project/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
Historico_app/: apps.py  models.py
Historico_app/migrations/: 0001_initial.py
Home_app/: urls.py  views.py
Perfil_app/: admin.py  models.py  urls.py  views.py
Perfil_app/migrations/: 0001_initial.py  0002_alter_perfil_usuario.py  0003_historico.py  0004_perfil_historico_alter_historico_acao.py  0005_alter_historico_acao_alter_perfil_historico.py  0006_remove_perfil_historico_historico_usuario.py  0007_alter_historico_usuario.py  0008_rename_usuario_historico_perfil.py  0009_rename_nome_completo_perfil_nome_historico_data_and_more.py  0010_delete_historico.py
Produtos_app/: admin.py  forms.py  models.py
Produtos_app/migrations/: 0001_initial.py  0002_alter_produto_foto.py  0003_imagens_produto_fotos.py  0004_categoria_remove_produto_usuario_and_more.py  0005_alter_produto_categoria.py  0006_rename_titulo_categoria_categoria_and_more.py  0007_produto_vendido.py  0008_categoria_imagem.py  0009_teste.py  0010_delete_teste.py  0011_alter_produto_publicado_por.py  0012_remove_produto_rating.py  0013_categoria_imagem_static_url.py  0014_produto_informacao.py
allauth/account/: views.py
(+22 files in other folders)
