[tool.poetry]
name = "desapeguei-project"
version = "0.1.0"
description = "Um simulador do famoso site OLX"
authors = ["Rip4568 <63131796+Rip4568@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "desapeguei_project"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.2"
whitenoise = "^6.2.0"
django-unicorn = "^0.48.0"
psycopg2 = "^2.9.4"
dj-database-url = "^1.0.0"
pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
